--- a/doc/releases/releases.yml
+++ b/doc/releases/releases.yml
@@ -14,6 +14,10 @@
 releases:
   nautilus:
     releases:
+      - version: 14.2.4
+        released: 2019-09-17
+      - version: 14.2.3
+        released: 2019-09-04
       - version: 14.2.2
         released: 2019-07-17
       - version: 14.2.1
@@ -222,6 +226,9 @@ releases:
 
 development:
   releases:
+    - version: 15.0.0
+      released: 2019-04-03
+      skip_ref: true        
     - version: 14.1.1
       released:  2019-03-11
       skip_ref: true        
