--- a/src/pybind/mgr/dashboard/frontend/package.json
+++ b/src/pybind/mgr/dashboard/frontend/package.json
@@ -86,6 +86,7 @@
     "ngx-toastr": "10.0.4",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.5.2",
+    "swagger-ui-dist": "3.23.10",
     "tslib": "1.9.3",
     "zone.js": "0.9.1"
   },
