--- a/src/python-common/tox.ini
+++ b/src/python-common/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py35, py36, flake8
+envlist = py27, py3, lint
 skip_missing_interpreters = true
 
 [testenv]
@@ -7,12 +7,18 @@ deps=
   pytest
 commands=py.test -v {posargs:ceph/tests}
 
-[testenv:flake8]
-deps=flake8
-commands=flake8 {posargs:ceph}
-
 [tool:pytest]
 norecursedirs = .* _* virtualenv
 
 [flake8]
-select=F,E9
+max-line-length = 100
+exclude =
+    __pycache__
+
+[testenv:lint]
+deps = 
+    -rrequirements-lint.txt
+commands =
+    flake8 {posargs:ceph}
+    rstcheck --report info --debug README.rst
+
