ceph.spec.in: add missing python-yaml dependency for mgr-k8sevents
otherwise we might have:

```
ceph/src/pybind/mgr/k8sevents/__init__.py", line 1, in <module>
    from .module import Module
  File "/home/kchai/ceph/src/pybind/mgr/k8sevents/module.py", line 28, in <module>
    import yaml
ImportError: No module named yaml
```

Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -577,6 +577,12 @@ Group:          System/Filesystems
 %endif
 Requires:       ceph-mgr = %{_epoch_prefix}%{version}-%{release}
 Requires:       python%{_python_buildid}-kubernetes
+%if 0%{?fedora} || 0%{?rhel}
+Requires:       python%{_python_buildid}-yaml
+%endif
+%if 0%{?suse_version}
+Requires:       python%{_python_buildid}-PyYAML
+%endif
 %description mgr-k8sevents
 ceph-mgr-k8sevents is a ceph-mgr plugin that sends every ceph-events
 to kubernetes' events API
