--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 # Dashboard team to review dashboard related code
 /src/pybind/mgr/dashboard                       @ceph/dashboard
-/qa/suites/rados/mgr/tasks/dashboard.yaml       @ceph/dashboard
+/qa/suites/rados/dashboard                      @ceph/dashboard
 /qa/tasks/mgr/test_dashboard.py                 @ceph/dashboard
 /qa/tasks/mgr/dashboard                         @ceph/dashboard
 /monitoring/grafana                             @ceph/dashboard
