python-common: move pytest integration from setup.py to tox.ini
Signed-off-by: Sebastian Wagner <sebastian.wagner@suse.com>

--- a/src/python-common/tox.ini
+++ b/src/python-common/tox.ini
@@ -2,14 +2,15 @@
 envlist = py27, py3, lint
 skip_missing_interpreters = true
 
-[testenv]
-deps=-rrequirements.txt
-
 [testenv:py3]
-commands=python setup.py test --addopts="--mypy --mypy-ignore-missing-imports" {posargs}
+deps=
+    -rrequirements.txt
+commands=pytest --mypy --mypy-ignore-missing-imports --log-cli-level=DEBUG {posargs}
 
 [testenv:py27]
-commands=python setup.py test {posargs}
+deps=
+    -rrequirements.txt
+commands=pytest --log-cli-level=DEBUG {posargs}
 
 [tool:pytest]
 norecursedirs = .* _* virtualenv
