debian/rules: run dh_python2 with ceph-daemon
to set substitute variable of `${python:Depends}` for this package

Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/debian/rules
+++ b/debian/rules
@@ -134,6 +134,7 @@ override_dh_python2:
 	dh_python2 -p ceph-mgr
 	# batch-compile, and set up for delete, all the module files
 	dh_python2 -p ceph-mgr usr/lib/ceph/mgr
+	dh_python2 -p ceph-daemon
 
 override_dh_python3:
 	for binding in rados cephfs rbd rgw; do \
