--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,3 +6,17 @@
 /monitoring/grafana                             @ceph/dashboard
 /monitoring/prometheus                          @ceph/dashboard
 /doc/mgr/dashboard.rst                          @ceph/dashboard
+
+# For Orchestrator related PRs
+/src/ceph-daemon                                @ceph/orchestrators
+/src/pybind/mgr/ansible                         @ceph/orchestrators
+/src/pybind/mgr/orchestrator_cli                @ceph/orchestrators
+/src/pybind/mgr/orchestrator.py                 @ceph/orchestrators
+/src/pybind/mgr/rook                            @ceph/orchestrators
+/src/pybind/mgr/ssh                             @ceph/orchestrators
+/src/pybind/mgr/test_orchestrator               @ceph/orchestrators
+/src/python-common/ceph/deployment              @ceph/orchestrators
+/qa/standalone/test_ceph_daemon.sh              @ceph/orchestrators
+/qa/tasks/mgr/test_orchestrator_cli.py          @ceph/orchestrators
+/doc/mgr/orchestrator_cli.rst                   @ceph/orchestrators
+/doc/mgr/orchestrator_modules.rst               @ceph/orchestrators
