--- a/src/pybind/mgr/ssh/Vagrantfile
+++ b/src/pybind/mgr/ssh/Vagrantfile
@@ -23,11 +23,11 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  config.vm.provision "shell" do |s|
-    ssh_pub_key = File.readlines("#{Dir.home}/.ssh/id_rsa.pub").first.strip
-    s.inline = "echo #{ssh_pub_key} >> /home/vagrant/.ssh/authorized_keys"
-    s.inline = "sudo cp -r /home/vagrant/.ssh /root/.ssh"
-  end
+  config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/id_rsa.pub"
+  config.vm.provision "shell", inline: <<-SHELL
+    cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+    sudo cp -r /home/vagrant/.ssh /root/.ssh
+  SHELL
 
   config.vm.provision "shell", inline: <<-SHELL
     sudo yum install -y yum-utils
