--- a/qa/tasks/ceph2.conf
+++ b/qa/tasks/ceph2.conf
@@ -2,11 +2,14 @@
 # make logging friendly to teuthology
 log_to_file = true
 log_to_stderr = false
+mon cluster log file level = debug
 
 mon clock drift allowed = 1.000
 
 # replicate across OSDs, not hosts
 osd crush chooseleaf type = 0
+#osd pool default size = 2
+osd pool default erasure code profile = "plugin=jerasure technique=reed_sol_van k=2 m=1 ruleset-failure-domain=osd crush-failure-domain=osd"
 
 # enable some debugging
 auth debug = true
@@ -29,14 +32,8 @@ mon_warn_on_pool_pg_num_not_power_of_two = false
 # disable pg_autoscaler by default for new pools
 osd_pool_default_pg_autoscale_mode = off
 
-#osd pool default size = 2
-
-osd pool default erasure code profile = "plugin=jerasure technique=reed_sol_van k=2 m=1 ruleset-failure-domain=osd crush-failure-domain=osd"
-
- # tests delete pools
+# tests delete pools
 mon allow pool delete = true
-
-mon cluster log file level = debug
 
 [osd]
 osd scrub load threshold = 5.0
@@ -54,8 +51,14 @@ osd debug shutdown = true
 osd debug op order = true
 osd debug verify stray on activate = true
 osd debug pg log writeout = true
-bdev debug aio = true
+osd debug verify cached snaps = true
+osd debug verify missing on start = true
 osd debug misdirected ops = true
+osd op queue = debug_random
+osd op queue cut off = debug_random
+osd shutdown pgref assert = true
+bdev debug aio = true
+osd sloppy crc = true
 
 [mgr]
 mon reweight min pgs per osd = 4
