pybind/mgr: Exclude tests/
Fixes: d6c10192c61a59f6a77d04a9d601c9df2f72d07f

Signed-off-by: Sebastian Wagner <sebastian.wagner@suse.com>

--- a/src/pybind/mgr/CMakeLists.txt
+++ b/src/pybind/mgr/CMakeLists.txt
@@ -17,6 +17,7 @@ install(DIRECTORY
   REGEX "CMakeLists.txt" EXCLUDE
   REGEX "\\.gitignore" EXCLUDE
   REGEX "hello/.*" EXCLUDE
+  REGEX "tests/.*" EXCLUDE
   REGEX "osd_perf_query/.*" EXCLUDE
   REGEX "tox.ini" EXCLUDE
   REGEX "requirements.txt" EXCLUDE)
