common/str_util: Add nul_terminated_copy
A simple function to make a NUL-terminated copy of a string in
statically allocated memory.

Signed-off-by: Adam C. Emerson <aemerson@redhat.com>

--- a/src/test/common/CMakeLists.txt
+++ b/src/test/common/CMakeLists.txt
@@ -318,4 +318,6 @@ add_executable(unittest_rabin_chunk test_rabin_chunk.cc
 target_link_libraries(unittest_rabin_chunk global ceph-common)
 add_ceph_unittest(unittest_rabin_chunk)
 
-
+add_executable(unittest_str_util test_str_util.cc)
+target_link_libraries(unittest_str_util GTest::GTest)
+add_ceph_unittest(unittest_str_util)
