--- a/src/sample.ceph.conf
+++ b/src/sample.ceph.conf
@@ -262,10 +262,9 @@
     ;debug mds                  = 20
     ;debug journaler            = 20
 
-    # The number of inodes to cache.
-    # Type: 32-bit Integer
-    # (Default: 100000)
-    ;mds cache size             = 250000
+    # The memory limit the MDS should enforce for its cache.
+    # (Default: 1G)
+    ;mds cache memory limit     = 2G
 
 ;[mds.alpha]
 ;    host                       = alpha
