--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -1161,6 +1161,7 @@ Summary:	The set of Grafana dashboards for monitoring purposes
 BuildArch:	noarch
 %if 0%{?suse_version}
 Group:		System/Filesystems
+Requires:	grafana > 6.3
 %endif
 %description grafana-dashboards
 This package provides a set of Grafana dashboards for monitoring of
@@ -2406,9 +2407,7 @@ exit 0
 
 %files grafana-dashboards
 %if 0%{?suse_version}
-%attr(0755,root,root) %dir %{_sysconfdir}/grafana
-%attr(0755,root,root) %dir %{_sysconfdir}/grafana/dashboards
-%attr(0755,root,root) %dir %{_sysconfdir}/grafana/dashboards/ceph-dashboard
+%attr(0750,root,grafana) %dir %{_sysconfdir}/grafana/dashboards/ceph-dashboard
 %else
 %attr(0755,root,root) %dir %{_sysconfdir}/grafana/dashboards/ceph-dashboard
 %endif
