rpm: fix typo in ceph-prometheus-alerts summary
Also replace fancy Unicode apostrophe with its humble ASCII counterpart in the
description.

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -1172,11 +1172,11 @@ integrated with the Ceph Manager Dashboard web UI.
 
 %if 0%{?suse_version}
 %package prometheus-alerts
-Summary:        Prometheus alerts for a Ceph deplyoment
+Summary:        Prometheus alerts for a Ceph deployment
 BuildArch:      noarch
 Group:          System/Monitoring
 %description prometheus-alerts
-This package provides Ceph’s default alerts for Prometheus.
+This package provides Ceph's default alerts for Prometheus.
 %endif
 
 #################################################################################
