rgw/pubsub: test: increase zone sync retries
Signed-off-by: Yuval Lifshitz <yuvalif@yahoo.com>

--- a/qa/suites/rgw/multisite/realms/three-zone-plus-pubsub.yaml
+++ b/qa/suites/rgw/multisite/realms/three-zone-plus-pubsub.yaml
@@ -1,5 +1,9 @@
 overrides:
   rgw-multisite:
+    config:
+      - checkpoint_retries: 60
+      - checkpoint_delay: 8
+      - reconfigure_delay: 60
     realm:
       name: test-realm
       is default: true
